--- a/internal/assets/manifests/base/values.yaml.tmpl
+++ b/internal/assets/manifests/base/values.yaml.tmpl
@@ -3,7 +3,12 @@ global:
   # ImagePullSecrets for control plane ServiceAccount, list of secrets in the same namespace
   # to use for pulling any images in pods that reference this ServiceAccount.
   # Must be set for any cluster configured with private docker registry.
+{{ if .GetSpec.GetK8S.GetImagePullSecrets }}
+  imagePullSecrets:
+{{ .GetSpec.GetK8S.GetImagePullSecrets | toYaml | indent 4 }}
+{{ else }}
   imagePullSecrets: []
+{{ end }}
 
   # Used to locate istiod.
   istioNamespace: {{ .Namespace }}
@@ -12,7 +17,7 @@ global:
     enableAnalysis: {{ or .GetSpec.GetIstiod.GetEnableAnalysis false }}
 
   configValidation: true
-  externalIstiod: false
+  externalIstiod: {{ or .GetSpec.GetIstiod.GetExternalIstiod.GetEnabled false }}
   remotePilotAddress: ""
 
   revision: "{{ .Name }}"
