Fix MutatingWebhook name

--- a/internal/assets/manifests/istio-control/istio-discovery/values.yaml.tmpl
+++ b/internal/assets/manifests/istio-control/istio-discovery/values.yaml.tmpl
@@ -211,7 +211,7 @@ revisionTags: []
 ownerName: ""
 
 global:
-  distribution: "cisco"
+  distribution: "istio"
   # Used to locate istiod.
   istioNamespace: istio-system
   # enable pod disruption budget for the control plane, which is used to
