--- a/internal/util/testdata/test_values.yaml.tmpl
+++ b/internal/util/testdata/test_values.yaml.tmpl
@@ -225,10 +225,6 @@ global:
   # Horizontal Pod Autoscaler will be able to function (if set).
   # Each component can overwrite these default values by adding its own resources
   # block in the relevant section below and setting the desired resources values.
-{{ if .GetSpec.GetK8S.GetResources }}
-  defaultResources:
-{{ .GetSpec.GetK8S.GetResources | toYaml | indent 4 }}
-{{ else }}
   defaultResources:
     requests:
       cpu: 10m
@@ -236,7 +232,6 @@ global:
   # limits:
   #   cpu: 100m
   #   memory: 128Mi
-{{ end }}
 
   # Default hub for Istio images.
   # Releases are published to docker hub under 'istio' project.
@@ -247,19 +242,14 @@ global:
 
   # Specify image pull policy if default behavior isn't desired.
   # Default behavior: latest images will be Always else IfNotPresent.
-  imagePullPolicy: "{{ .GetSpec.GetK8S.GetImagePullPolicy }}"
+  imagePullPolicy: ""
 
   # ImagePullSecrets for all ServiceAccount, list of secrets in the same namespace
   # to use for pulling any images in pods that reference this ServiceAccount.
   # For components that don't use ServiceAccounts (i.e. grafana, servicegraph, tracing)
   # ImagePullSecrets will be added to the corresponding Deployment(StatefulSet) objects.
   # Must be set for any cluster configured with private docker registry.
-{{ if .GetSpec.GetK8S.GetImagePullSecrets }}
-  imagePullSecrets:
-{{ .GetSpec.GetK8S.GetImagePullSecrets | toYaml | indent 4 }}
-{{ else }}
   imagePullSecrets: []
-{{ end }}
 
   # Enabled by default in master for maximising testing.
   istiod:
@@ -304,7 +294,7 @@ global:
   # will not be killed because of low priority class.
   # Refer to https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/#priorityclass
   # for more detail.
-  priorityClassName: "{{ .GetSpec.GetK8S.GetPriorityClassName }}"
+  priorityClassName: ""
 
   proxy:
     image: {{ or .GetSpec.GetProxy.GetImage "proxyv2" }}
